--- a/fa/dune
+++ b/fa/dune
@@ -5,9 +5,11 @@
  (modules
    common
    basicFa
+   regexTree
    regex
    translation
    backend
+   to_regex
    fa
  )
  (preprocess (pps ppx_here ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))
