--- a/qcFA/dune
+++ b/qcFA/dune
@@ -9,12 +9,12 @@
 ;    (:standard -unsafe -noassert -inline 100))))
 
 (library
- (public_name AutomataLibrary.qcFA)
- (name qcFA)
+ (public_name AutomataLibrary.qcFa)
+ (name qcFa)
  (wrapped true)
  (modules
    gen
-   qcFA
+   qcFa
  )
  (preprocess
   (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_here))
