--- a/fa/dune
+++ b/fa/dune
@@ -10,6 +10,7 @@
    translation
    backend
    to_regex
+   normal_regex_typing
    fa
  )
  (preprocess (pps ppx_here ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))
