--- a/qcFA/dune
+++ b/qcFA/dune
@@ -19,4 +19,4 @@
  (inline_tests)
  (preprocess
   (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_here ppx_inline_test))
- (libraries fa qcheck str))
+ (libraries sfa qcheck str))
