--- a/sevent/dune
+++ b/sevent/dune
@@ -1,13 +1,14 @@
 (library
- (name fa)
- (public_name AutomataLibrary.fa)
+ (name sevent)
+ (public_name AutomataLibrary.sevent)
  (wrapped true)
  (modules
-   basicFa
-   visualize
-   translation
-   fa
+   sv
+   to_sevent
+   sevent
+   normal_sevent_typing
+   common
  )
  (preprocess (pps ppx_here ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))
- (libraries zutils core core_unix yojson dolog ocolor ppx_here regex backend)
+ (libraries zutils core core_unix yojson dolog ocolor ppx_here)
 )
