--- a/ast/dune
+++ b/ast/dune
@@ -1,13 +1,15 @@
 (library
- (name fa)
- (public_name AutomataLibrary.fa)
+ (name ast)
+ (public_name AutomataLibrary.ast)
  (wrapped true)
  (modules
-   basicFa
-   visualize
-   translation
-   fa
+   parseTree
+   mapf
+   fv
+   subst
+   astHelper
+   ast
  )
  (preprocess (pps ppx_here ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord))
- (libraries zutils core core_unix yojson dolog ocolor ppx_here regex backend)
+ (libraries zutils core yojson dolog ocolor ppx_here)
 )
