--- a/qcFA/dune
+++ b/qcFA/dune
@@ -20,4 +20,4 @@
  (inline_tests)
  (preprocess
   (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_here ppx_inline_test))
- (libraries sfa qcheck str))
+ (libraries language sfa qcheck str))
