--- a/meta-config.json
+++ b/meta-config.json
@@ -12,15 +12,59 @@
         // "queries",
         // "model",
         // "z3encode",
-        // "preprocess",
+        // "axiom",
+        "unification",
+        // "instantiateRty",
+        "auxtyping",
+        // "simplProp",
+        "preprocess",
+        "typing",
         "result",
         // "desym_mapping",
         // "desymbolic",
         "never-use"
     ],
-    "prover_timeout_bound": 999,
+    "bool_options": [
+        [
+            "show_sevent_fds",
+            false
+        ],
+        [
+            "show_type_infer_pre_judgement",
+            false
+        ],
+        [
+            "show_type_infer_constant_judgement",
+            false
+        ],
+        [
+            "show_type_infer_variable_judgement",
+            false
+        ],
+        [
+            "show_var_type_in_prop",
+            false
+        ],
+        [
+            "show_var_type_in_lit",
+            false
+        ],
+        [
+            "show_var_type_in_term",
+            true
+        ],
+        [
+            "instantiate_poly_type_var_in_smt",
+            false
+        ],
+        [
+            "show_record_type_feilds",
+            false
+        ]
+    ],
+    "prover_timeout_bound": 1999,
     "prim_path": {
-        "predefined_path": "synRuntime/automata/builtin.s",
+        "predefined_path": "data/predefined",
         "axioms_path": "",
         "templates_path": "",
         "p_header_template_path": "synRuntime/plang/header_template.funcp",
